<resources>
    <string name="app_name">Aplicacion Comedor</string>
    <string name="nav_header_title">Comedor Comunitario</string>
    <string name="nav_header_subtitle">Nombre y número de Comedor</string>
    <string name="nav_header_desc">Imagen DIF</string>
    <string name="action_settings">Cerrar Sesión</string>


    <string name="menu_voluntario">Voluntario</string>
    <string name="menu_registro">Nuevo Registro</string>
    <string name="menu_asistencia">Registrar Asistencia</string>
    <string name="menu_reporte">Reportar un Problema</string>
    <string name="menu_cerrar">Cerrar Sesión</string>
    <string name="menu_sesion">Iniciar Sesión</string>
    <string name="menu_familia">Familia</string>
    <string name="personaFab">Persona</string>
    <string name="familiaFab">Familia</string>
    <string name="textoSearchAsistente">Busca por nombre...</string>

    <string-array name="tipos_asistencia">
        <item>Pagado $13</item>
        <item>Donado $0</item>
        <item>Solo Registro</item>
    </string-array>

    <string-array name="generos">
        <item>Hombre</item>
        <item>Mujer</item>
        <item>Otro</item>
    </string-array>

    <string-array name="comedores">
        <item>1: Centro</item>
        <item>2: Calle Morelos</item>
        <item>3: Calle Geranio</item>
    </string-array>

    <string-array name="roles">
        <item>Voluntario</item>
        <item>Administrador/a del comedor</item>
        <item>Cocina</item>
    </string-array>

    <string-array name="problemas">
        <item>Problema de suministros</item>
        <item>No abrimos hoy</item>
        <item>Recursos</item>
    </string-array>

</resources>